tests/errors/preprocessor/large_value/in_eval.c
#eval(12345678909876543213456789)

void main()
{

}
